--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@ body{
 
 }
 
-h1 {
+.theme {
     font-family: 'Permanent Marker', cursive;
     text-align: center;
     font-size: 70px;
@@ -22,6 +22,15 @@ h1 {
     transform: skewY(10deg);
     padding-left:1%;
     padding-top:2%;
+}
+
+ .start-win-loss {
+    color:white;
+    text-align: center;
+    padding-top: 3%;
+    position: absolute;
+    top: 10%;
+    left: 32%;
 }
 
 .display-section {
